@@ -1,3 +1,10 @@
+September 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * libpcsxcore/cdriso.c: Don't delay before feeding CDDA data to the SPU
+   plugin.
+ * plugins/dfsound/alsa.c: Don't try initializing CDDA sound handle over
+   and over and over again if failed.
+
 September 3, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * libpcsxcore/cdriso.c: Fixed time overflow on 32-bit GNU/Linux system.
